# AuditorAgent

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SYSTEM_DIAGRAM.md  glpi-task-complete.json  glpi-task-start.json  glpi_proxy.py  pyproject.toml
.kiro/hooks/: glpi-task-complete.kiro.hook  glpi-task-start.kiro.hook
.kiro/specs/architecture-doc-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: glpi-tickets.md
192.168.1.244_100.112.16.115/SCRAPER/: DATA_SPEC(1).md  SPEC(1).md  TASKS.md
192.168.1.33_100.105.152.56/ALGO_TRADING/: CHANGELOG.md  SPEC.md
arch_agent/: __init__.py  api.py  cli.py  config.py  exceptions.py  memory.py  orchestrator.py
arch_agent/models/: __init__.py  docs.py  documents.py  glpi.py  memory.py  risk.py
arch_agent/tools/: __init__.py  docgen.py  glpi.py  improvement.py  ingestion.py  risk.py
tests/: test_glpi.py  test_ingestion.py  test_memory.py  test_tools.py
